# new-car

./: README.md  pyproject.toml
charts/: correlation.ipynb  histplots.ipynb  plots.ipynb
linear_regression/: multiple_features.py  single_feature.py
notebooks/: exploratory-analysis.ipynb  feature_selection.ipynb
