[tool.poetry]
name = "new-car"
version = "0.1.0"
description = ""
authors = ["Hugo-Andria-Alexandre-Assad"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^1.26.4"
seaborn = "^0.13.2"
matplotlib = "^3.8.4"
scikit-learn = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
